improve news widget to use number in limit field

--- a/server/widgets/news/form.hbs
+++ b/server/widgets/news/form.hbs
@@ -6,7 +6,7 @@
 
   <div class="form-group">
     <label for="widget-form-{{type}}-limit">{{t 'Limit'}}</label>
-    <input required="required" type="text" id="widget-form-{{type}}-limit" name="limit" value="{{configuration.limit}}">
+    <input type="number" id="widget-form-{{type}}-limit" name="limit" value="{{configuration.limit}}">
   </div>
 
   {{{controllFields}}}
